--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,9 @@
   "name": "viewfix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://b3nj0.github.io/viewfix",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.13",
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
