--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-ga": "^2.3.5",
     "react-scripts": "1.0.13",
     "semantic-ui-react": "^0.74.2"
   },
